Revision history for Perl extension DBIx::DataModel.

v3.03 23.07.2022
  - forgot to update Build.PL to depend on SQL::Abstract::More v1.39

v3.02 22.07.2022
  - upgrade dependency on SQL::Abstract::More v1.37
  - fix circular dependency in Meta::Utils
  - fix documentation of Meta::Utils (API as functions instead of methods)

v3.01 02.02.2021
  - upgrade dependency on SQL::Abstract::More v1.37
  - internals: common infrastructure for abstract methods
  - fix a very old bug : make class method primary_key() work in multi-schema mode.
  - cleanup references to old method primKey() instead of primary_key()
  - replace Acme::Damn by Data::Structure::Util
  - documentation and tests for the set operators -union, -intersect, etc.
  - -result_as => 'hashref' or 'categorize' can take a subroutine argument
  - kwalitee improvements (Filippo Biondi++)

v3.0 23.02.2018
  - bump to next major version
  - complete revision of documentation

v2.47_06-08 06.02.2018
  - after_commit callbacks are executed outside of the transaction
  - new schema parameter 'resultAs_classes'
  - suppress ConnectedSource -- now handled directly within source classes
  - new parameter 'join_with_USING', both at statement and at schema level
  - simplification and cleanup of all v2 tests

v2.47_05 08.01.2018
  - extending -result_as through subclasses in DBIDM::Schema::ResultAs namespace
  - new result kinds : xlsx, tsv, file_tabular, count, table, etc.
  - methods db_schema() and with_db_schema to prefix tables by DB schema name
  - new method $schema->do_after_commit()
  - new statement methods : dbh(), finish(), headers()
  - better factorization of operations for update()
  - better validation of arguments (no longer allow_extra)
  - use Carp::Clan
  - drop dependency on Scalar::Does
  - Meta::Utils exports subroutines instead of OO methods
  - suppress ConnectedSource -- methods are handled directly in Source classes
  - main test suite ported to v2 syntax