@@ -1,5 +1,7 @@
 Revision history for Perl extension DBIx::DataModel.
 
+  - fix $metatable->components (was populated on both paths, which is obviously wrong)
+
 v3.03 23.07.2022
   - forgot to update Build.PL to depend on SQL::Abstract::More v1.39
 
